--- a/BulkyWeb/Views/Product/Index.cshtml
+++ b/BulkyWeb/Views/Product/Index.cshtml
@@ -1,1 +1,28 @@
-﻿<h1>Product list</h1>
+﻿@model List<Product>
+<h1>Product list</h1>
+<table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <th>
+                Display order
+            </th>
+            <th>
+                Category Name
+            </th>
+            <th>
+                Preço
+            </th>           
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var obj in Model.OrderBy(u=> u.Id))
+        {
+         <tr>
+             <td>@obj.Id</td>
+            <td>@obj.Name</td>
+            <td>@obj.Price</td>
+        </tr>
+        }
+        
+    </tbody>
+</table>
