--- a/BulkyWeb/Views/Product/Index.cshtml
+++ b/BulkyWeb/Views/Product/Index.cshtml
@@ -1,6 +1,18 @@
 ﻿@model List<Product>
-<h1>Product list</h1>
-<table class="table table-bordered table-striped">
+<div class="container">
+    <div class="row pt-4">
+        <div class="row col-6">
+            <h2 class="text-dark">
+                Person list
+            </h2>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-controller="Product" asp-action="create" class="btn btn-primary">
+                <i class="bi bi-plus-circle-dotted"></i> Create new product
+            </a>
+        </div>
+    </div>
+    <table class="table table-bordered table-striped">
     <thead>
         <tr>
             <th>
@@ -25,4 +37,5 @@
         }
         
     </tbody>
-</table>
+    </table>
+</div>
