--- a/BulkyWeb/Views/Product/Create.cshtml
+++ b/BulkyWeb/Views/Product/Create.cshtml
@@ -4,17 +4,16 @@
         <div class="row pb-2">
             <h2 class="text-primary">Create product</h2>
         </div>
-        <div class="mb-3 row pd-1">
-            <label asp-for="Id" class="p-0">Display order</label>
-            <input asp-for="Id" type="text" class="form-control" />
-        </div>
+        <div asp-validation-summary="All"></div>
         <div class="mb-3 row pd-1">
             <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" type="text" class="form-control" />
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3 row pd-1">
             <label asp-for="Price" class="p-0"></label>
-            <input asp-for="Price" type="text" class="form-control" />
+            <input asp-for="Price" class="form-control" />
+            <span asp-validation-for="Price" class="text-danger"></span>
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
